cabal-version:       2.4
name:                cryptopals
version:             0.1.0.0
license-file:        LICENSE
author:              Kevin Galligan
maintainer:          galligankevinp@gmail.com
build-type:          Simple

library
  exposed-modules:
    Cryptopals.Util
    Cryptopals.Set1.Challenge01
    Cryptopals.Set1.Challenge02
    Cryptopals.Set1.Challenge03
  hs-source-dirs:      src
  build-depends:       base, bytestring, containers
